Adjusted layout of outer borders, resize, and rotate to prevent overlapping of content while editing.

--- a/libsrc/scss/edit.scss
+++ b/libsrc/scss/edit.scss
@@ -238,6 +238,7 @@ background-color: lightgrey;
         margin: -7px 0 0 -7px;
         width: 14px; height:14px;
         border-radius: 7px;
+        z-index: 5;
     }
 }
 #controls {
